# clepsy

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  docker-compose.ci.override.yml  docker-compose.prod.ci.yml  docker-compose.prod.gateway.yml  docker-compose.prod.local.yml  docker-compose.prod.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json  post_start.sh
.github/workflows/: checks.yml  dev.yml  docker-dev.yml  docker-publish.yml  main.yml  publish.yml
baml_src/: aggregation.baml  clients.baml  desktop_check.baml  desktop_check_validation.baml  entities.baml  generators.baml  interpret_image_ocr.baml  isolated_timeline_validation.baml  manual_activity_reconciliation.baml  productivity_classification.baml  qc_timeline.baml  retry_policies.baml  sessions.baml  stitch.baml  tag_classification.baml  test_model_config.baml
docs/: SETUP.md
migrations/: 00001_first.sql  00002_idempotency.sql
ops/: loki-config.yml  prometheus.yml  promtail-config.yml
ops/grafana/provisioning/dashboards/: 11835_Redis_Dashboard.json  18739_FastAPI_Observability.json  18993_Dramatiq.json  loki_13186_rev1.json  provider.yml
ops/grafana/provisioning/datasources/: prometheus.yml
ops/promtail-data/: positions.yaml
scripts/: analyze_unused_detailed.py  entrypoint.sh  find_unused_code.py  fix_dirs.sh  fix_permissions.sh  worker_entrypoint.sh
src/clepsy/: __init__.py  aggregator_worker.py  bootstrap.py  central_cache.py  config.py  cron_config.py  entities.py  event_bus.py  human_readable_pw.py  llm.py  main.py  queues.py  scheduler.py  scheduling.py  utils.py  workers.py
src/clepsy/auth/: auth.py  auth_middleware.py
src/clepsy/db/: __init__.py  adapters.py  converters.py  db.py  deps.py  queries.py
src/clepsy/frontend/components/: __init__.py  base_page.py  buttons.py  generic_modal.py  icons.py  popover.py  select.py  sidebar.py  slider.py  table.py  text.py  time.py  time_duration_picker.py  time_nav.py  toasts.py  tooltips.py  top_bar.py
src/clepsy/frontend/css/: app.css  easymde_override.css  flatpickr.css  multi_select.css  themes.css
src/clepsy/infra/: dramatiq_setup.py  rq_setup.py  streams.py  valkey_client.py
src/clepsy/jobs/: actor_init.py  aggregation.py  desktop.py  goals.py  mobile.py  scheduled_job_dispatch.py  scheduler_tick.py  sessions.py
src/clepsy/modules/: __init__.py
src/clepsy/modules/account_creation/: page.py  router.py
src/clepsy/modules/activities/: add_router.py  edit_router.py  (+2 more)
static/: alpinejs.3.14.7.min.js
static/custom_scripts/: app.js  chart_utils.js  clepsy_chart.js  dark_light_mode.js  date_range.js  insights_focus_sessions.js  insights_productivity_donut.js  insights_productivity_time_slice.js  insights_tag_transition_chord.js  insights_time_spent_per_tag.js  theme_switcher.js  time_duration_picker.js  unified_diagram.js  utils.js
tests/: conftest.py  llm_configs.py  test_date_shenanigans.py  test_desktop_check_scenarios.py  test_desktop_worker_ocr.py  test_human_readable_pw.py  test_isolated_timeline_generation.py  test_llm_models_validation.py  test_manual_reconciliation.py  test_pii.py  test_stitching.py  test_tag_classification.py  test_utils.py
tests/scenarios/: __init__.py  make_all_scenarios.py  types.py
tests/scenarios/instances/: __init__.py  casual_web_browsing_and_social_media.py  coding_then_afk.py  context_switching.py  data_analysis_and_email.py  interrupted_content_creation.py  interrupted_design_work.py  llm_stitching_match_writing.py  llm_stitching_no_match.py  llm_stitching_required.py  meeting_then_coding.py  online_shopping_with_research.py  photo_editing_and_organization.py  project_management_and_communication.py  simple_coding.py
tests/sessions/: __init__.py  test_build_island_arrays.py  test_extract_islands.py  test_pick_best_window.py  test_validate_and_select.py
(+54 files in other folders)
